--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>QR Menü</title>
 </head>
 <body>
-    
+    <div class="navbar">
+    <div class="container">
+        <a href="#" class="logo">EDA<span>deneme</span></a>
+        <img id="mobile-exit" class="mobile-menu-exit">
+        <ul class="primary-nav">
+         <li class="current"> <a href="#">home</a></li>
+         <li> <a href="#"> features</a></li>
+         <li> <a href="#"> pricing</a></li>
+        </ul>
+        <ul class="secondry-nav"></ul>
+         <li> <a href="#"> Contact</a></li>
+
+
+
+
+
+
+
+
+
+    </div>
+    </div>
 </body>
 </html>
