--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
     <div class="navbar">
     <div class="container">
         <a href="#" class="logo">EDA<span>deneme</span></a>
+       <nav>
         <img id="mobile-exit" class="mobile-menu-exit">
         <ul class="primary-nav">
          <li class="current"> <a href="#">home</a></li>
          <li> <a href="#"> features</a></li>
          <li> <a href="#"> pricing</a></li>
         </ul>
-        <ul class="secondry-nav"></ul>
-         <li> <a href="#"> Contact</a></li>
+        <ul class="secondry-nav">
+            <li> <a href="#"> Contact</a></li>
+            <li class="buy-it-cta"> <a href="#">Buy it</a></li>
+
+        </ul>
+         
 
 
-
-
-
-
-
-
-
+       </nav>
     </div>
     </div>
 </body>
