--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
 </head>
 <body>
     <div class="navbar">
-    <div class="container">
-        <a href="#" class="logo">EDA<span>deneme</span></a>
-       <nav>
-        <img id="mobile-exit" class="mobile-menu-exit">
-        <ul class="primary-nav">
-         <li class="current"> <a href="#">home</a></li>
-         <li> <a href="#"> features</a></li>
-         <li> <a href="#"> pricing</a></li>
-        </ul>
-        <ul class="secondry-nav">
-            <li> <a href="#"> Contact</a></li>
-            <li class="buy-it-cta"> <a href="#">Buy it</a></li>
-
-        </ul>
-         
-
-
-       </nav>
+        <div class="container">
+            <a href="#" class="logo">EDA<span>deneme</span></a>
+            <nav>
+                <img id="mobile-exit" class="mobile-menu-exit" alt="Exit mobile menu">
+                <ul class="primary-nav">
+                    <li class="current"><a href="#">Home</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                </ul>
+                <ul class="secondary-nav">
+                    <li><a href="#">Contact</a></li>
+                    <li class="buy-it-cta"><a href="#">Buy it</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
-    </div>
+    <section class="hero">
+        <div class="container">
+            <div class="left-col">
+                <!-- hero buraya gelecek-->
+            </div>
+        </div>
+    </section>
 </body>
 </html>
