--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Menü</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
     <div class="navbar">
@@ -30,5 +31,29 @@
             </div>
         </div>
     </section>
+    <section class="testimonals-section">
+        <div class="container">
+            <ul class="features-list">
+                <li>Safe Online Shopping</li>
+                <li>To The Location You Want</li>
+                <li>Securn return Exchange</li>
+            </ul>
+        </div>
+        </section>
+        <section class="testimonals-section">
+            <div class="container">
+          <ul>
+           <li>
+             <img src="images/person.jpg" alt="person">
+
+             <blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+             </blockquote>
+             <cite>David Stone</cite>
+           </li>
+
+
+          </ul>
+    
 </body>
 </html>
