--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <a href="#" class="logo">EDA<span>deneme</span></a>
             <nav>
-                <img id="mobile-exit" class="mobile-menu-exit" alt="Exit mobile menu">
+                <img id="mobile-exit" class="mobile-menu-exit" alt="Exit mobile menu"/>
                 <ul class="primary-nav">
                     <li class="current"><a href="#">Home</a></li>
                     <li><a href="#">Features</a></li>
@@ -36,24 +36,37 @@
             <ul class="features-list">
                 <li>Safe Online Shopping</li>
                 <li>To The Location You Want</li>
-                <li>Securn return Exchange</li>
+                <li>Secure Return Exchange</li> <!-- Typo corrected -->
             </ul>
         </div>
-        </section>
-        <section class="testimonals-section">
-            <div class="container">
-          <ul>
-           <li>
-             <img src="images/person.jpg" alt="person">
-
-             <blockquote>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-             </blockquote>
-             <cite>David Stone</cite>
-           </li>
-
-
-          </ul>
-    
+    </section>
+    <section class="testimonals-section">
+        <div class="container">
+            <ul>
+                <li>
+                    <img src="images/person.jpg" alt="person">
+                    <blockquote>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </blockquote>
+                    <cite>David Stone</cite>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="contact-section"> <!-- Typo corrected -->
+        <div class="container">
+            <div class="contact-left">
+                <h2>CONTACT</h2>
+                <form action="">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="your name"/>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="your email"/>
+                    <label for="message">Message</label> <!-- Typo corrected -->
+                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
