--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="hero">
         <div class="container">
             <div class="left-col">
-                <!-- hero buraya gelecek-->
+                
             </div>
         </div>
     </section>
@@ -36,7 +36,7 @@
             <ul class="features-list">
                 <li>Safe Online Shopping</li>
                 <li>To The Location You Want</li>
-                <li>Secure Return Exchange</li> <!-- Typo corrected -->
+                <li>Secure Return Exchange</li> 
             </ul>
         </div>
     </section>
@@ -53,7 +53,7 @@
             </ul>
         </div>
     </section>
-    <section class="contact-section"> <!-- Typo corrected -->
+    <section class="contact-section"> 
         <div class="container">
             <div class="contact-left">
                 <h2>CONTACT</h2>
@@ -62,7 +62,7 @@
                     <input type="text" id="name" placeholder="your name"/>
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" placeholder="your email"/>
-                    <label for="message">Message</label> <!-- Typo corrected -->
+                    <label for="message">Message</label> 
                     <textarea name="message" id="message" cols="30" rows="10"></textarea>
                 </form>
             </div>
