--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <div class="content">
         <section id="home">
-            <h1>Welcome to My Company</h1>
+            <h1>Welcome to <span> My Company</span></h1> 
             <p>We provide exceptional services to help you succeed in your business.</p>
         </section>
         <section id="about">
