about kısmında css düzenlenmesi

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bize Ulaşın</title>
+    <title>QR Menü Projesi</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="logo">QR Menü</div>
+        <ul class="navbar-menu">
+            <li class="navbar-item"><a href="index.html">Anasayfa</a></li>
+            <li class="navbar-item"><a href="about.html">Hakkımızda</a></li>
+            <li class="navbar-item"><a href="pricing.html">Ücretlendirme</a></li>
+            <li class="navbar-item"><a href="contact.html">Bize Ulaşın</a></li>
+        </ul>
+    </nav>
+    <div class="content">
+     
+    </div>
 </body>
 </html>
