--- a/index.html
+++ b/index.html
@@ -10,71 +10,19 @@
     <nav class="navbar">
         <div class="logo">QR Menü</div>
         <ul class="navbar-menu">
-            <li class="navbar-item"><a href="#home">Home</a></li>
-            <li class="navbar-item"><a href="#about">About</a></li>
-            <li class="navbar-item"><a href="#services">Services</a></li>
-            <li class="navbar-item"><a href="#contact">Contact</a></li>
-            <li class="navbar-item"><a href="#blog">Blog</a></li>
+            <li class="navbar-item"><a href="index.html">Anasayfa</a></li>
+            <li class="navbar-item"><a href="about.html">Hakkımızda</a></li>
+            <li class="navbar-item"><a href="pricing.html">Ücretlendirme</a></li>
+            <li class="navbar-item"><a href="contact.html">Bize Ulaşın</a></li>
+
         </ul>
     </nav>
     <div class="content">
-        <section id="home">
-            <h1>Welcome to <span> My Company</span></h1> 
-            <p>We provide exceptional services to help you succeed in your business.</p>
-        </section>
-        <section id="about">
-            <h1>About Us</h1>
-            <p>My Company has been a leading provider of business solutions for over a decade. Our team of experts is dedicated to delivering innovative solutions that meet your needs.</p>
-        </section>
-        <section id="services">
-            <h1>Our Services</h1>
-            <div class="services-list">
-                <div class="service-item">
-                    <h2>Consulting</h2>
-                    <p>Our consulting services help you strategize and optimize your business processes.</p>
-                </div>
-                <div class="service-item">
-                    <h2>Technology</h2>
-                    <p>We provide cutting-edge technology solutions to keep you ahead of the curve.</p>
-                </div>
-                <div class="service-item">
-                    <h2>Support</h2>
-                    <p>Our support team is available 24/7 to assist you with any issues you may face.</p>
-                </div>
-            </div>
-        </section>
-        <section id="contact">
-            <h1>Contact Us</h1>
-            <p>If you have any questions or would like to learn more about our services, please get in touch with us.</p>
-            <form>
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" required></textarea>
-                </div>
-                <button type="submit">Send</button>
-            </form>
-        </section>
-        <section id="blog">
-            <h1>Our Blog</h1>
-            <div class="blog-posts">
-                <div class="blog-post">
-                    <h2>How to Improve Your Business</h2>
-                    <p>Read our latest tips on how to enhance your business operations and achieve greater success.</p>
-                </div>
-                <div class="blog-post">
-                    <h2>Technology Trends in 2024</h2>
-                    <p>Stay up-to-date with the latest technology trends that are shaping the business world.</p>
-                </div>
-            </div>
-        </section>
+        <div class="kutu">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam nobis accusantium dolorem numquam. Quam asperiores dignissimos ut aliquam fuga, neque consequatur? Iste est labore consequatur. Temporibus ipsam veritatis sit iure.</p>
+            <div id="button">Teklif Al</div>
+        </div>
     </div>
+    
 </body>
 </html>
