Geri bildirimlerdeki HTML değişiklikleri

--- a/pricing.html
+++ b/pricing.html
@@ -17,9 +17,21 @@
         </ul>
     </nav>
     <div class="content container">
-        <div class="box">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, voluptas aliquid voluptate nemo ipsum odit delectus culpa quidem voluptates magni pariatur vel quasi sapiente vero repudiandae esse repellat rem expedita.</div>
-        <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis a distinctio earum cupiditate nulla nihil omnis laboriosam deleniti inventore ad nostrum fugit dolore, eos culpa aperiam excepturi necessitatibus voluptatum voluptas?</div>
-        <div class="box">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit rem laudantium maxime expedita, eos vitae eius quod quas voluptas recusandae velit minima, rerum ab aperiam ex aliquid voluptates laborum molestias.</div>
+        <div class="box">
+            <h2 class="box-header">Price</h2>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, voluptas aliquid voluptate nemo ipsum odit delectus culpa quidem voluptates magni pariatur vel quasi sapiente vero repudiandae esse repellat rem expedita.
+            <h4>1000₺</h4>
+        </div>
+        <div class="box">
+            <h2 class="box-header">Price</h2>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, voluptas aliquid voluptate nemo ipsum odit delectus culpa quidem voluptates magni pariatur vel quasi sapiente vero repudiandae esse repellat rem expedita.
+            <h4>1000₺</h4>
+        </div>
+        <div class="box">
+            <h2 class="box-header">Price</h2>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, voluptas aliquid voluptate nemo ipsum odit delectus culpa quidem voluptates magni pariatur vel quasi sapiente vero repudiandae esse repellat rem expedita.
+            <h4>1000₺</h4>
+        </div>
     </div>
 </body>
 </html>
