--- a/contact.html
+++ b/contact.html
@@ -17,20 +17,20 @@
         </ul>
     </nav>
     <div class="content">
-        <form>
+        <form id="submit-form">
             <div class="form-group">
-                <label for="name">Name</label>
+                <label for="name">Ad Soyad*</label>
                 <input type="text" id="name" name="name" required>
             </div>
             <div class="form-group">
-                <label for="email">Email</label>
+                <label for="email">E-Posta Adresi*</label>
                 <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
-                <label for="message">Message</label>
+                <label for="message">Mesajınız*</label>
                 <textarea id="message" name="message" required></textarea>
             </div>
-            <button type="submit">Send</button>
+            <button type="submit">Bize Ulaşın</button>
         </form>
          
     </div>
