Javascript degişken tanımlama yapıldı.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Menü Projesi</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <nav class="navbar">
@@ -23,6 +24,13 @@
             <div id="button">Teklif Al</div>
         </div>
     </div>
-    
+    <script>
+  var a= "JavaScript";
+  var b ="Programlama";
+  var c="Dili";
+  alert(a+b+c)
+
+
+    </script>
 </body>
 </html>
