Arreyler ve fonksiyonları tanımlandı.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Menü Projesi</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
+
 <body>
     <nav class="navbar">
         <div class="logo">QR Menü</div>
@@ -20,17 +22,31 @@
     </nav>
     <div class="content">
         <div class="kutu">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam nobis accusantium dolorem numquam. Quam asperiores dignissimos ut aliquam fuga, neque consequatur? Iste est labore consequatur. Temporibus ipsam veritatis sit iure.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam nobis accusantium dolorem numquam. Quam
+                asperiores dignissimos ut aliquam fuga, neque consequatur? Iste est labore consequatur. Temporibus ipsam
+                veritatis sit iure.</p>
             <div id="button">Teklif Al</div>
         </div>
     </div>
     <script>
-  var a= "JavaScript";
-  var b ="Programlama";
-  var c="Dili";
-  alert(a+b+c)
-
-
+        var a = "JavaScript";
+        var b = "Programlama";
+        var c = "Dili";
+        alert(a + b + c)
     </script>
+   <!--
+script>
+        var array =[Java,Pyhton,C++,C];
+        alert(array[0]);
+        alert(array[1]);
+        alert(array[2]);
+        alert(array[3]);
+        array.push(go);
+      alert(array.length); 
+    </script>
+
+
+   --> 
 </body>
+
 </html>
