--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
             <div id="button">Teklif Al</div>
         </div>
     </div>
-    <script>
+   <!--
+<script>
         var a = "JavaScript";
         var b = "Programlama";
         var c = "Dili";
         alert(a + b + c)
     </script>
+   --> 
    <!--
 script>
         var array =[Java,Pyhton,C++,C];
@@ -47,6 +49,26 @@ script>
 
 
    --> 
+   <script>
+    var i=0;
+    while(i<100){
+    console.log( "i değeri : " +i);
+    i+=2;
+
+    }
+   </script>
+   <script>
+    var sayılar = [32,5,1,68,99];
+    console.log("array elemanları");
+    sayılar.forEach(function(sayı){
+    console.log("eleman : " +sayı);
+
+
+
+    }) ;
+
+    
+   </script>
 </body>
 
 </html>
