--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ script>
 
 
    --> 
-   <script>
+  <!-- 
+<script>
     var i=0;
     while(i<100){
     console.log( "i değeri : " +i);
@@ -69,6 +70,19 @@ script>
 
     
    </script>
+  -->  
+
+  <script>
+    var a =0;
+    var b=0;
+    if(a==b){
+        console. log("eşit");
+    }
+       else{
+        console.log("eşit degil");
+       }
+    
+  </script>
 </body>
 
 </html>
