--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@ script>
        }
     
   </script>
+  <script>
+    var calısan = {
+        isim: "Eda",
+        soyisim:"Akgül",
+        diller: ["php","java","c++"],
+    };
+    console.log (calısan.isim)
+    console.log(calısan.diller)
+  </script>
 </body>
 
 </html>
