For döngüsü örnekleri çalışıldı.

--- a/examples/example.html
+++ b/examples/example.html
@@ -52,7 +52,9 @@ script>
    </script>
   -->  
 
-  <script>
+  
+    <!--
+       <script>
     var a =0;
     var b=0;
     if(a==b){
@@ -72,4 +74,25 @@ script>
     console.log(calisan.isim);
     console.log(calisan.diller);
   </script>
+    --> 
+
+    <script>
+      for (let index = 1; index <=10; index++) {
+        if(i%2==1) {
+          console.log("tek sayı")
+        } else {
+          console.log("çift sayı")
+        }
+        
+      }
+    </script>
+    <script>
+      //50 den 1 e kadar gidelim ve toplamlarını bulalım.
+      let toplam = 0;
+      for (let i=50; index<=1; index--){
+        toplam+i;
+        console.log(i); 
+      }
+      console.log("toplam : ",toplam);
+    </script>
 </html>
